2005-01-09  Phil Blundell  <philb@gnu.org>

	* Version 0.60 released.

2005-01-09  Phil Blundell  <philb@gnu.org>

	Apply patches from Peter Naulls:
	* week_view.c (draw_expose_event): Use different background colours
	for weekdays, weekends, and days with events.
	* month_view.c (draw_expose_event): Likewise.	

2005-01-09  Phil Blundell  <philb@gnu.org>

	* event-ui.c (build_edit_event_window): Avoid GtkButtonBox.  Allow
	start and end time fields to expand horizontally.

	* Makefile (LIBGPEVTYPE_PC_EXTRA): Prepend to PKG_CONFIG_PATH,
	don't replace it.

2004-12-21  Florian Boor <florian.boor@kernelconcepts.de>
	
	* Version 0.59 released.

2004-11-25  Florian Boor <florian.boor@kernelconcepts.de>

	* event-ui.c: Applied patch to fix transientness, thanks to
          Christian Gillot for this patch.

2004-11-15  Phil Blundell  <pb@nexus.co.uk>

	* week_view.c (week_view_button_press): Bring popup behaviour in
	line with month view: single left click moves focus; double left
	click moves focus and switches to day view; right click opens
	popup menu.

2004-11-15  Phil Blundell  <pb@nexus.co.uk>

	* month_view.c (button_press): Delete bogus check for button==1.

	* week_view.c (week_view_key_press_event): Replace complicated
	up/down logic with calls to gtk_date_sel_move_day.

2004-11-07  Phil Blundell  <pb@nexus.co.uk>

	* Makefile (LINGUAS): Add zh_CN.
	* po/zh_CN.po: New file, courtesy Meng Jie.

2004-10-09  Phil Blundell  <pb@nexus.co.uk>

	* Version 0.58 released.

2004-10-09  Phil Blundell  <pb@nexus.co.uk>

	* day_view.c (day_changed_calendar): Do nothing if date has not
	actually changed.
	* week_view.c (day_changed_calendar): Likewise.

2004-10-09  Phil Blundell  <pb@nexus.co.uk>

	* day_view.c (day_view): Single click on calendar moves highlight,
	even when not in stylus mode.
	* week_view.c (week_view): Likewise.

2004-10-09  Phil Blundell  <pb@nexus.co.uk>

	* month_view.c (title_height): New global.
	(button_press): Use it.